<resources>

    <string name="app_name">Android_MaterialDesign</string>
    <string name="app_title">Material Drawer</string>
    <!-- Activity Component's -->
    <string name="main_txt">Material Design</string>
    <string name="main_rdBtn_activity1">Activity 1</string>
    <string name="main_rdBtn_activity2">Activity 2</string>
    <string name="main_btn">Switch Activity</string>
    <!-- Navigation Drawer Items -->
    <string name="nav_inbox">Inbox</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_sent_email">Sent Email</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_sub_header">Sub Header</string>
    <string name="nav_all_email">All Email</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_spam">Spam</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_search">Search</string>
    <!--String Use In View's -->
    <string name="nav_header_name">sea2fun</string>
    <string name="nav_header_email">sea2fun@gmail.com</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="tab_title_android">ANDROID</string>
    <string name="tab_title_ios">IOS</string>
    <string name="main_rdBtn_activity3">Activity 3</string>
    <string name="main_rdBtn_activity4">Activity 4</string>
    <string name="main_rdBtn_activity5">Activity 5</string>
    <string name="main_rdBtn_activity6">Activity 6</string>
    <string name="alert_btn_discard_title">Discard Draft</string>
    <string name="alert_btn_confirmation_title">Confirmation</string>
    <string name="alert_btn_multi_options_title">Multi Options</string>
    <string name="alert_btn_set_item_title">Set Item</string>
    <string name="alert_btn_custom_dialog_title">Custom Dialog</string>
    <string name="alert_pBtn_discard">Discard</string>
    <string name="alert_nBtn_discard">Cancel</string>
    <string name="alert_pBtn_confirmation">Confirm</string>
    <string name="alert_nBtn_confirmation">Cancel</string>
    <string name="password_hint_default">Password</string>
    <string name="username_hint_default">Username</string>
    <string name="password_error_default">* Required Field</string>
    <string name="username_error_default">* Required Field</string>
    <string name="ac_six_signup_title">SIGN UP</string>
    <string name="ac_six_chip_female">Female</string>
    <string name="ac_six_chip_male">Male</string>
    <string name="ac_detailEight_switch_title">Turn ON/OFF</string>

    <!--String Use In Toast's -->
    <string name="toast_select_item">Please , Select One Item</string>
    <string name="toast_retry_action">Action Failed ! Please Retry Action</string>
    <string name="snackbar_btn_retry">Retry</string>
    <string name="alert_message_discard">Discard Draft ?</string>
    <string name="alert_successfully_discard">Discard Successfully</string>
    <string name="alert_failed_discard">Discard Failed</string>
    <string name="alert_message_confirmation">Select The Player.</string>
    <string name="main_rdBtn_activity7">Activity 7</string>
    <string name="main_rdBtn_activity8">Activity 8</string>
    <string name="main_rdBtn_activity9">Activity 9</string>
    <string name="option_button"><![CDATA[&#8942;]]></string>
    <string name="menu_item_title_remove">Remove</string>
    <string name="menu_item_title_edit">Edit</string>
    <string name="menu_item_title_add">Add Item</string>
    <string name="main_rdBtn_activity10">Activity 10</string>
    <string name="ac_detailEight_checkbox_title">CheckBox</string>


</resources>
