<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/nav_inbox"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_starred" />
        <item
            android:id="@+id/nav_sent_email"
            android:icon="@drawable/ic_send"
            android:title="@string/nav_sent_email" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_drafts"
            android:title="@string/nav_drafts" />
        <item
            android:id="@+id/nav_sub_header"
            android:title="@string/nav_sub_header" >
            <menu>
                <item
                    android:id="@+id/nav_all_email"
                    android:icon="@drawable/ic_email"
                    android:title="@string/nav_all_email" />
                <item
                    android:id="@+id/nav_trash"
                    android:icon="@drawable/ic_delete"
                    android:title="@string/nav_trash" />
                <item
                    android:id="@+id/nav_spam"
                    android:icon="@drawable/ic_spam"
                    android:title="@string/nav_spam" />
            </menu>
        </item>
    </group>
</menu>